--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#1bb566">
     <title>Birthday Portfolio</title>
-    <link rel="stylesheet" href="ilma bir.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -110,7 +110,7 @@
             </div>
         </div>
     </div>
-    <script src="ilma bir.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
